Fix Version Mobile

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 .section{
     width: 100%;
-    height: 120vh;
+    height: 100vh;
     min-height: 100vh;
     display: flex;
     background:linear-gradient(164deg,#2C3355,#6E83C1);
@@ -271,6 +271,10 @@ body{
     } */
 }
 @media (max-width: 560px){
+    .section{
+        height: 120vh;
+
+    }
     .perivewCard{
         width: 100%;
         height: 80%;
